--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.decimal4j</groupId>
+            <artifactId>decimal4j</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
 
 </project>
